# flutter_native_extensions

./: .cirrus.yml  .gitmodules  README.md
.ci/FlutterRust/: Dockerfile
.github/workflows/: main.yml
src/annoy/dart_native_annoy/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
src/annoy/dart_native_annoy/example/: example.md
src/annoy/dart_native_annoy/lib/: annoy.dart
src/annoy/dart_native_annoy/test/: annoy_test.dart  setup_util.dart
src/compression/: gen_flutter_native_libs.sh
src/compression/dart_native_compression/: CHANGELOG.md  README.md  pubspec.yaml
src/compression/dart_native_compression/bench/: main.dart  pubspec.yaml
src/compression/dart_native_compression/example/: example.md
src/compression/dart_native_compression/lib/: dart_native_compression.dart
src/compression/dart_native_compression/test/: lz4_test.dart  native_buffer_test.dart  setup_util.dart
src/compression/flutter_native_compression/: README.md  pubspec.yaml
src/compression/flutter_native_compression/android/: build.gradle  settings.gradle
src/compression/flutter_native_compression/example/: README.md  pubspec.yaml
src/compression/flutter_native_compression/ios/: flutter_native_compression.podspec
src/compression/flutter_native_compression/lib/: flutter_native_compression.dart
src/compression/flutter_native_compression/test/: flutter_native_compression_test.dart
src/compression/native_compression/: Cargo.toml  build.rs
src/compression/native_compression/src/: lib.rs
src/compression/native_compression/src/lz4/: mod.rs  native.rs
(+21 files in other folders)
