[package]
name = "dart_native_compression"
version = "0.1.0"
authors = ["hanabi1224"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[lib]
name = "dart_native_compression"
crate-type = ["lib", "staticlib", "cdylib"]
