[package]
authors = ["hanabi1224"]
edition = "2018"
name = "dart_native_compression"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0"

[build-dependencies]
cc = "1"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "dart_native_compression"
